[UPD] Reorganizar + solucionar print acta url

--- a/src/genweb/organs/theme/scss/_print.scss
+++ b/src/genweb/organs/theme/scss/_print.scss
@@ -51,11 +51,11 @@
   .template-printacta #content-header,
   .template-printdocument #content-header,
   .template-printdocument #portal-footer-wrapper {
-    display: none;
+    display: none !important;
   }
 
   #portal-column-content {
-    margin:0 !important;
+    margin: 0 !important;
     width: 100% !important;
   }
 
