[FIX] CSS workflow-transition-convocar

--- a/src/genweb/organs/browser/stylesheets/genweb_organs.css
+++ b/src/genweb/organs/browser/stylesheets/genweb_organs.css
@@ -1194,7 +1194,7 @@ span.agreementClassPunt {
 }
 
 #workflow-transition-convocar {
-    display: none;
+    display: none !important;
 }
 
 #contentActionMenus li ul li.actionSeparator {display: none;}
