[FIX] excusar_assist

--- a/src/genweb/organs/theme/scss/_edicio.scss
+++ b/src/genweb/organs/theme/scss/_edicio.scss
@@ -21,3 +21,12 @@ b.form-label {
     font-weight: 700;
   }
 }
+
+
+
+body.template-excusar_assist_sessio {
+
+  #social_tags {
+    display: none !important;
+  }
+}
