[UPD] Avances session

--- a/src/genweb/organs/theme/scss/content/_sessio.scss
+++ b/src/genweb/organs/theme/scss/content/_sessio.scss
@@ -22,18 +22,49 @@ body.portaltype-genweb-organs-sessio {
     }
   }
 
-
-  /* Estilos para mostrar/ocultar el icono correcto en el botón de colapso */
-  .btn-expand-collapse .bi-chevron-up { display: none; }
-  .btn-expand-collapse[aria-expanded="true"] .bi-chevron-up { display: inline-block; }
-  .btn-expand-collapse[aria-expanded="true"] .bi-chevron-down { display: none; }
-
-  /* Estilo para que el botón no parezca un botón y tenga el cursor correcto */
-  .btn-expand-collapse {
-    background: none;
-    border: none;
+  #sortable {
+    list-style-type: none;
+    margin: 0;
     padding: 0;
-    color: #557c95;
-    cursor: pointer;
+    width: auto;
+
+    .ui-state-grey, 
+    .ui-state-grey-not_move, 
+    .ui-state-grey-impersonate {
+      border: 1px solid #eee;
+      position: relative;
+      font-weight: normal;
+      color: black;
+    }
+  
+    .ui-state-grey {
+  
+      &:hover {
+        background: #f9f9f9 none repeat scroll 0 0;
+        cursor: move;
+        position: relative;
+  
+        &:before {
+          cursor: move;
+          color: #007BC0;
+          position: absolute;
+          font-size: 15px;
+          bottom: 10px;
+          left:10px;
+        }
+      }
+  
+      &.picked { 
+        background:#e5f7ff !important; 
+      }
+    }
+  
+    .ui-state-grey-file:hover {
+      background: #f9f9f9 none repeat scroll 0 0 !important;
+      position: relative;
+    }
   }
 }
+
+
+
