[FIX] getColor + [UPD] session

--- a/src/genweb/organs/theme/scss/content/_sessio.scss
+++ b/src/genweb/organs/theme/scss/content/_sessio.scss
@@ -63,6 +63,11 @@ body.portaltype-genweb-organs-sessio {
       background: #f9f9f9 none repeat scroll 0 0 !important;
       position: relative;
     }
+
+    .einesSpan {
+      position: absolute;
+      background: linear-gradient(to right, rgba(229, 247, 255, 0) 0%, rgba(229, 247, 255, 1) 30%, rgba(229, 247, 255, 1) 100%);
+    }
   }
 }
 
