--- a/src/genweb/organs/theme/stylesheets/theme.css
+++ b/src/genweb/organs/theme/stylesheets/theme.css
@@ -482,3 +482,8 @@ body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-file:hover {
   background: #f9f9f9 none repeat scroll 0 0 !important;
   position: relative;
 }
+/* line 67, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio #sortable .einesSpan {
+  position: absolute;
+  background: linear-gradient(to right, rgba(229, 247, 255, 0) 0%, #e5f7ff 30%, #e5f7ff 100%);
+}
