[UPD] Session - Tab votaciones

--- a/src/genweb/organs/theme/scss/content/_sessio.scss
+++ b/src/genweb/organs/theme/scss/content/_sessio.scss
@@ -1,5 +1,16 @@
 body.portaltype-genweb-organs-sessio {
 
+  .openInfo {
+    cursor: pointer;
+  }
+
+  #resultsVotesTab {
+    
+    .btn-outline-info {
+      cursor: help !important;
+    }
+  }
+
   .sessionActions {
 
     span,
