--- a/src/genweb/organs/theme/stylesheets/theme-concat.css
+++ b/src/genweb/organs/theme/stylesheets/theme-concat.css
@@ -420,36 +420,44 @@ body.portaltype-genweb-organs-organgovern #contentOrgan .reorder a:hover {
   font-weight: 700 !important;
 }
 
-/* line 5, ../scss/content/_sessio.scss */
+/* line 3, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio .openInfo {
+  cursor: pointer;
+}
+/* line 9, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio #resultsVotesTab .btn-outline-info {
+  cursor: help !important;
+}
+/* line 16, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio .sessionActions span,
 body.portaltype-genweb-organs-sessio .sessionActions a {
   font-weight: normal !important;
   max-width: 130px;
 }
-/* line 10, ../scss/content/_sessio.scss */
+/* line 21, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio .sessionActions span i::before,
 body.portaltype-genweb-organs-sessio .sessionActions a i::before {
   font-size: 2rem;
 }
-/* line 14, ../scss/content/_sessio.scss */
+/* line 25, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio .sessionActions span.btn-success,
 body.portaltype-genweb-organs-sessio .sessionActions a.btn-success {
   cursor: default;
 }
-/* line 17, ../scss/content/_sessio.scss */
+/* line 28, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio .sessionActions span.btn-success:hover,
 body.portaltype-genweb-organs-sessio .sessionActions a.btn-success:hover {
   background-color: var(--bs-btn-bg) !important;
   border-color: var(--bs-btn-border-color) !important;
 }
-/* line 25, ../scss/content/_sessio.scss */
+/* line 36, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable {
   list-style-type: none;
   margin: 0;
   padding: 0;
   width: auto;
 }
-/* line 31, ../scss/content/_sessio.scss */
+/* line 42, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-not_move,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-impersonate {
@@ -458,13 +466,13 @@ body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-impersonate {
   font-weight: normal;
   color: black;
 }
-/* line 42, ../scss/content/_sessio.scss */
+/* line 53, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey:hover {
   background: #f9f9f9 none repeat scroll 0 0;
   cursor: move;
   position: relative;
 }
-/* line 47, ../scss/content/_sessio.scss */
+/* line 58, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey:hover:before {
   cursor: move;
   color: #007BC0;
@@ -473,16 +481,16 @@ body.portaltype-genweb-organs-sessio #sortable .ui-state-grey:hover:before {
   bottom: 10px;
   left: 10px;
 }
-/* line 57, ../scss/content/_sessio.scss */
+/* line 68, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey.picked {
   background: #e5f7ff !important;
 }
-/* line 62, ../scss/content/_sessio.scss */
+/* line 73, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-file:hover {
   background: #f9f9f9 none repeat scroll 0 0 !important;
   position: relative;
 }
-/* line 67, ../scss/content/_sessio.scss */
+/* line 78, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable .einesSpan {
   position: absolute;
   background: linear-gradient(to right, rgba(229, 247, 255, 0) 0%, #e5f7ff 30%, #e5f7ff 100%);
