--- a/src/genweb/organs/theme/stylesheets/theme.css
+++ b/src/genweb/organs/theme/stylesheets/theme.css
@@ -495,3 +495,7 @@ body.portaltype-genweb-organs-sessio #sortable .einesSpan {
   position: absolute;
   background: linear-gradient(to right, rgba(229, 247, 255, 0) 0%, #e5f7ff 30%, #e5f7ff 100%);
 }
+/* line 85, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio #sortable .puntVoteButtons .btn.disabled {
+  cursor: not-allowed;
+}
