--- a/src/genweb/organs/theme/scss/_generic.scss
+++ b/src/genweb/organs/theme/scss/_generic.scss
@@ -98,3 +98,19 @@
     margin-bottom: 0 !important;
   }
 }
+
+.w-3 {
+  width: 3% !important;
+}
+
+.w-5 {
+  width: 5% !important;
+}
+
+.w-20 {
+  width: 20% !important;
+}
+
+.w-75 {
+  width: 75% !important;
+}
