--- a/src/genweb/organs/theme/stylesheets/theme.css
+++ b/src/genweb/organs/theme/stylesheets/theme.css
@@ -178,6 +178,26 @@ body.template-search .meva-vinculacio a:hover {
   margin-bottom: 0 !important;
 }
 
+/* line 102, ../scss/_generic.scss */
+.w-3 {
+  width: 3% !important;
+}
+
+/* line 106, ../scss/_generic.scss */
+.w-5 {
+  width: 5% !important;
+}
+
+/* line 110, ../scss/_generic.scss */
+.w-20 {
+  width: 20% !important;
+}
+
+/* line 114, ../scss/_generic.scss */
+.w-75 {
+  width: 75% !important;
+}
+
 @media print {
   /* line 3, ../scss/_print.scss */
   body {
@@ -495,7 +515,15 @@ body.portaltype-genweb-organs-sessio #sortable .einesSpan {
   position: absolute;
   background: linear-gradient(to right, rgba(229, 247, 255, 0) 0%, #e5f7ff 30%, #e5f7ff 100%);
 }
-/* line 85, ../scss/content/_sessio.scss */
+/* line 87, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio #sortable .titleSpan a:hover {
+  text-decoration: underline;
+}
+/* line 95, ../scss/content/_sessio.scss */
 body.portaltype-genweb-organs-sessio #sortable .puntVoteButtons .btn.disabled {
   cursor: not-allowed;
+}
+/* line 100, ../scss/content/_sessio.scss */
+body.portaltype-genweb-organs-sessio #sortable .listFiles {
+  padding-left: 10%;
 }
