[UPD] Session acciones js

--- a/src/genweb/organs/theme/scss/content/_sessio.scss
+++ b/src/genweb/organs/theme/scss/content/_sessio.scss
@@ -90,18 +90,18 @@ body.portaltype-genweb-organs-sessio {
       }
     }
 
+    .filesinTable {
+
+      .titleSpan {
+        margin-left: calc(8% + 1rem)
+      }
+    }
+
     .puntVoteButtons {
 
       .btn.disabled {
         cursor: not-allowed;
       }
     }
-
-    .listFiles {
-      padding-left: 10%;
-    }
   }
 }
-
-
-
