--- a/src/genweb/organs/theme/scss/_generic.scss
+++ b/src/genweb/organs/theme/scss/_generic.scss
@@ -114,3 +114,35 @@
 .w-75 {
   width: 75% !important;
 }
+
+.bi-file-earmark-pdf.double-icon {
+
+  &:after {
+    display: inline-block;
+    font-family: bootstrap-icons !important;
+    font-style: normal;
+    font-weight: 400 !important;
+    font-variant: normal;
+    text-transform: none;
+    line-height: 1;
+    vertical-align: -.125em;
+    -webkit-font-smoothing: antialiased;
+    content: "\f63e";
+    color: var(--bs-danger);
+    background-color: var(--bs-body-bg);
+    position: relative;
+    margin-right: -7px;
+    left: -7px;
+    top: 4px;
+  }
+}
+
+.picked {
+
+  .bi-file-earmark-pdf.double-icon {
+
+    &:after {
+      background-color: #e5f7ff!important;
+    }
+  }
+}
