--- a/src/genweb/organs/theme/stylesheets/theme.css
+++ b/src/genweb/organs/theme/stylesheets/theme.css
@@ -198,6 +198,31 @@ body.template-search .meva-vinculacio a:hover {
   width: 75% !important;
 }
 
+/* line 120, ../scss/_generic.scss */
+.bi-file-earmark-pdf.double-icon:after {
+  display: inline-block;
+  font-family: bootstrap-icons !important;
+  font-style: normal;
+  font-weight: 400 !important;
+  font-variant: normal;
+  text-transform: none;
+  line-height: 1;
+  vertical-align: -.125em;
+  -webkit-font-smoothing: antialiased;
+  content: "\f63e";
+  color: var(--bs-danger);
+  background-color: var(--bs-body-bg);
+  position: relative;
+  margin-right: -7px;
+  left: -7px;
+  top: 4px;
+}
+
+/* line 144, ../scss/_generic.scss */
+.picked .bi-file-earmark-pdf.double-icon:after {
+  background-color: #e5f7ff !important;
+}
+
 @media print {
   /* line 3, ../scss/_print.scss */
   body {
