--- a/src/genweb/organs/theme/scss/_generic.scss
+++ b/src/genweb/organs/theme/scss/_generic.scss
@@ -115,7 +115,7 @@
   width: 75% !important;
 }
 
-.bi-file-earmark-pdf.double-icon {
+.bi.double-icon {
 
   &:after {
     display: inline-block;
@@ -127,7 +127,6 @@
     line-height: 1;
     vertical-align: -.125em;
     -webkit-font-smoothing: antialiased;
-    content: "\f63e";
     color: var(--bs-danger);
     background-color: var(--bs-body-bg);
     position: relative;
@@ -135,11 +134,26 @@
     left: -7px;
     top: 4px;
   }
+
+
+  &.bi-file-earmark-pdf {
+
+    &:after {
+      content: "\f63e";
+    }
+  }
+
+  &.bi-file-earmark-text {
+
+    &:after {
+      content: "\f38b";
+    }
+  }
 }
 
 .picked {
 
-  .bi-file-earmark-pdf.double-icon {
+  .bi.double-icon {
 
     &:after {
       background-color: #e5f7ff!important;
