[UPD] Avances session

--- a/src/genweb/organs/theme/scss/_generic.scss
+++ b/src/genweb/organs/theme/scss/_generic.scss
@@ -111,8 +111,16 @@
   width: 20% !important;
 }
 
+.w-72 {
+  width: 72% !important;
+}
+
 .w-75 {
   width: 75% !important;
+}
+
+.mw-50 {
+  max-width: 50% !important;
 }
 
 .bi.double-icon {
