--- a/src/genweb/organs/theme/scss/content/_sessio.scss
+++ b/src/genweb/organs/theme/scss/content/_sessio.scss
@@ -97,6 +97,10 @@ body.portaltype-genweb-organs-sessio {
       }
     }
 
+    .li_subgrups {
+      padding-left: calc(8% + 1rem)
+    }
+
     .puntVoteButtons {
 
       .btn.disabled {
