--- a/src/genweb/organs/theme/stylesheets/theme-concat.css
+++ b/src/genweb/organs/theme/stylesheets/theme-concat.css
@@ -497,44 +497,58 @@ body.portaltype-genweb-organs-organgovern #contentOrgan .reorder a:hover {
   font-weight: 700 !important;
 }
 
-/* line 3, ../scss/content/_sessio.scss */
+/* line 4, ../scss/content/_sessio.scss */
+body.template-signsessio .openInfo,
 body.portaltype-genweb-organs-sessio .openInfo {
   cursor: pointer;
 }
-/* line 9, ../scss/content/_sessio.scss */
+/* line 10, ../scss/content/_sessio.scss */
+body.template-signsessio #resultsVotesTab .btn-outline-info,
 body.portaltype-genweb-organs-sessio #resultsVotesTab .btn-outline-info {
   cursor: help !important;
 }
-/* line 16, ../scss/content/_sessio.scss */
+/* line 17, ../scss/content/_sessio.scss */
+body.template-signsessio .sessionActions span,
+body.template-signsessio .sessionActions a,
 body.portaltype-genweb-organs-sessio .sessionActions span,
 body.portaltype-genweb-organs-sessio .sessionActions a {
   font-weight: normal !important;
   max-width: 130px;
 }
-/* line 21, ../scss/content/_sessio.scss */
+/* line 22, ../scss/content/_sessio.scss */
+body.template-signsessio .sessionActions span i::before,
+body.template-signsessio .sessionActions a i::before,
 body.portaltype-genweb-organs-sessio .sessionActions span i::before,
 body.portaltype-genweb-organs-sessio .sessionActions a i::before {
   font-size: 2rem;
 }
-/* line 25, ../scss/content/_sessio.scss */
+/* line 26, ../scss/content/_sessio.scss */
+body.template-signsessio .sessionActions span.btn-success,
+body.template-signsessio .sessionActions a.btn-success,
 body.portaltype-genweb-organs-sessio .sessionActions span.btn-success,
 body.portaltype-genweb-organs-sessio .sessionActions a.btn-success {
   cursor: default;
 }
-/* line 28, ../scss/content/_sessio.scss */
+/* line 29, ../scss/content/_sessio.scss */
+body.template-signsessio .sessionActions span.btn-success:hover,
+body.template-signsessio .sessionActions a.btn-success:hover,
 body.portaltype-genweb-organs-sessio .sessionActions span.btn-success:hover,
 body.portaltype-genweb-organs-sessio .sessionActions a.btn-success:hover {
   background-color: var(--bs-btn-bg) !important;
   border-color: var(--bs-btn-border-color) !important;
 }
-/* line 36, ../scss/content/_sessio.scss */
+/* line 37, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable,
 body.portaltype-genweb-organs-sessio #sortable {
   list-style-type: none;
   margin: 0;
   padding: 0;
   width: auto;
 }
-/* line 42, ../scss/content/_sessio.scss */
+/* line 43, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .ui-state-grey,
+body.template-signsessio #sortable .ui-state-grey-not_move,
+body.template-signsessio #sortable .ui-state-grey-impersonate,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-not_move,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-impersonate {
@@ -543,13 +557,15 @@ body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-impersonate {
   font-weight: normal;
   color: black;
 }
-/* line 53, ../scss/content/_sessio.scss */
+/* line 54, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .ui-state-grey:hover,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey:hover {
   background: #f9f9f9 none repeat scroll 0 0;
   cursor: move;
   position: relative;
 }
-/* line 58, ../scss/content/_sessio.scss */
+/* line 59, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .ui-state-grey:hover:before,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey:hover:before {
   cursor: move;
   color: #007BC0;
@@ -558,35 +574,42 @@ body.portaltype-genweb-organs-sessio #sortable .ui-state-grey:hover:before {
   bottom: 10px;
   left: 10px;
 }
-/* line 68, ../scss/content/_sessio.scss */
+/* line 69, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .ui-state-grey.picked,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey.picked {
   background: #e5f7ff !important;
 }
-/* line 73, ../scss/content/_sessio.scss */
+/* line 74, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .ui-state-grey-file:hover,
 body.portaltype-genweb-organs-sessio #sortable .ui-state-grey-file:hover {
   background: #f9f9f9 none repeat scroll 0 0 !important;
   position: relative;
 }
-/* line 78, ../scss/content/_sessio.scss */
+/* line 79, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .einesSpan,
 body.portaltype-genweb-organs-sessio #sortable .einesSpan {
   position: absolute;
   background: linear-gradient(to right, rgba(229, 247, 255, 0) 0%, #e5f7ff 30%, #e5f7ff 100%);
 }
-/* line 87, ../scss/content/_sessio.scss */
+/* line 88, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .titleSpan a:hover,
 body.portaltype-genweb-organs-sessio #sortable .titleSpan a:hover {
   text-decoration: underline;
 }
-/* line 95, ../scss/content/_sessio.scss */
-body.portaltype-genweb-organs-sessio #sortable .filesinTable .titleSpan {
-  margin-left: calc(8% + 1rem);
-}
-/* line 100, ../scss/content/_sessio.scss */
-body.portaltype-genweb-organs-sessio #sortable .li_subgrups {
-  padding-left: calc(8% + 1rem);
-}
-/* line 106, ../scss/content/_sessio.scss */
+/* line 96, ../scss/content/_sessio.scss */
+body.template-signsessio #sortable .puntVoteButtons .btn.disabled,
 body.portaltype-genweb-organs-sessio #sortable .puntVoteButtons .btn.disabled {
   cursor: not-allowed;
+}
+/* line 104, ../scss/content/_sessio.scss */
+body.template-signsessio .filesinTable .titleSpan,
+body.portaltype-genweb-organs-sessio .filesinTable .titleSpan {
+  margin-left: calc(8% + 1rem);
+}
+/* line 109, ../scss/content/_sessio.scss */
+body.template-signsessio .li_subgrups,
+body.portaltype-genweb-organs-sessio .li_subgrups {
+  padding-left: calc(8% + 1rem);
 }
 /*! jQuery UI - v1.14.1 - 2024-10-30
 * https://jqueryui.com
